Modified Swagger DTO Objects
