# IndiaCP_SwaggerSpecificaiton/src/main/java/com/barclays/indiacp/model/DepositoryAccountDetails.java
@@ -28,19 +28,54 @@ package com.barclays.indiacp.model;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 
 /**
  * DepositoryAccountDetails
  */
-@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2017-01-03T04:48:43.472Z")
+@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2017-01-03T07:18:23.010Z")
 public class DepositoryAccountDetails   {
   @JsonProperty("dp_id")
   private String dpId = null;
 
   @JsonProperty("dp_name")
   private String dpName = null;
+
+  /**
+   * Depository Account Type. For now only the IPA has two depository accounts one for Allotment and one for Redemption
+   */
+  public enum DpTypeEnum {
+    ALLOTTMENT("ALLOTTMENT"),
+    
+    REDEMPTION("REDEMPTION");
+
+    private String value;
+
+    DpTypeEnum(String value) {
+      this.value = value;
+    }
+
+    @Override
+    @JsonValue
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static DpTypeEnum fromValue(String text) {
+      for (DpTypeEnum b : DpTypeEnum.values()) {
+        if (String.valueOf(b.value).equals(text)) {
+          return b;
+        }
+      }
+      return null;
+    }
+  }
+
+  @JsonProperty("dp_type")
+  private DpTypeEnum dpType = null;
 
   @JsonProperty("client_id")
   private String clientId = null;
@@ -81,6 +116,24 @@ public class DepositoryAccountDetails   {
     this.dpName = dpName;
   }
 
+  public DepositoryAccountDetails dpType(DpTypeEnum dpType) {
+    this.dpType = dpType;
+    return this;
+  }
+
+   /**
+   * Depository Account Type. For now only the IPA has two depository accounts one for Allotment and one for Redemption
+   * @return dpType
+  **/
+  @ApiModelProperty(value = "Depository Account Type. For now only the IPA has two depository accounts one for Allotment and one for Redemption")
+  public DpTypeEnum getDpType() {
+    return dpType;
+  }
+
+  public void setDpType(DpTypeEnum dpType) {
+    this.dpType = dpType;
+  }
+
   public DepositoryAccountDetails clientId(String clientId) {
     this.clientId = clientId;
     return this;
@@ -111,12 +164,13 @@ public class DepositoryAccountDetails   {
     DepositoryAccountDetails depositoryAccountDetails = (DepositoryAccountDetails) o;
     return Objects.equals(this.dpId, depositoryAccountDetails.dpId) &&
         Objects.equals(this.dpName, depositoryAccountDetails.dpName) &&
+        Objects.equals(this.dpType, depositoryAccountDetails.dpType) &&
         Objects.equals(this.clientId, depositoryAccountDetails.clientId);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(dpId, dpName, clientId);
+    return Objects.hash(dpId, dpName, dpType, clientId);
   }
 
 
@@ -127,6 +181,7 @@ public class DepositoryAccountDetails   {
     
     sb.append("    dpId: ").append(toIndentedString(dpId)).append("\n");
     sb.append("    dpName: ").append(toIndentedString(dpName)).append("\n");
+    sb.append("    dpType: ").append(toIndentedString(dpType)).append("\n");
     sb.append("    clientId: ").append(toIndentedString(clientId)).append("\n");
     sb.append("}");
     return sb.toString();
