# IndiaCP_SwaggerSpecificaiton/src/main/resources/swagger.json
@@ -362,6 +362,83 @@
         }
     },
     "definitions": {
+        "LegalEntityCreditRatingDocument": {
+            "type": "object",
+            "properties": {
+                "legal_entity_id": {
+                    "type": "string",
+                    "description": "Unique identifier of the Legal Entity that this document is Issued for"
+                },
+                "credit_rating_agency_name": {
+                    "type": "string",
+                    "description": "Unique identifier for the Credit Rating Agency"
+                },
+                "credit_rating_amount": {
+                    "type": "integer",
+                    "description": "Unique identifier of the CP Program that this document is associated with"
+                },
+                "credit_rating": {
+                    "type": "string",
+                    "description": "Rating assigned by the CRA"
+                },
+                "credit_rating_issuance_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Rating issuance date"
+                },
+                "credit_rating_effective_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Rating effective date, which can be different from the issuance date"
+                },
+                "credit_rating_expiry_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Rating expiry date"
+                },
+                "modified_by": {
+                    "type": "string",
+                    "description": "Unique identifier of the Logged-in User that performed the action. This is required for Audit History"
+                },
+                "last_modified": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Last Modified Date for this CPIssue. This is required for Audit History"
+                }
+            }
+        },
+        "BoardResolutionBorrowingLimitDocument": {
+            "type": "object",
+            "properties": {
+                "legal_entity_id": {
+                    "type": "string",
+                    "description": "Unique identifier of the Legal Entity that this document is issued by"
+                },
+                "board_resolution_borrowing_limit": {
+                    "type": "integer",
+                    "description": "Borrowing Limit approved by board"
+                },
+                "board_resolution_issuance_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Date on which the BR was issued"
+                },
+                "board_resolution_expiry_date": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Date on which the BR will become obsolete"
+                },
+                "modified_by": {
+                    "type": "string",
+                    "description": "Unique identifier of the Logged-in User that performed the action. This is required for Audit History"
+                },
+                "last_modified": {
+                    "type": "string",
+                    "format": "date",
+                    "description": "Last Modified Date for this BR upload. This is required for Audit History"
+                }
+            }
+        },
         "IndiaCPProgram": {
             "type": "object",
             "properties": {
@@ -372,10 +449,6 @@
                 "name": {
                     "type": "string",
                     "description": "Name of the CP Program"
-                },
-                "user_id": {
-                    "type": "string",
-                    "description": "User identifier"
                 },
                 "type": {
                     "type": "string",
@@ -455,10 +528,6 @@
                     "type": "string",
                     "description": "Unique identifier of the Allotment Letter generated by IPA for CP transfer to Investor DP account"
                 },
-                "org_unit": {
-                    "type": "string",
-                    "description": "Top level organizational borrowing limit contract"
-                },
                 "status": {
                     "type": "string",
                     "description": "Current status of the CP Program"
@@ -484,10 +553,6 @@
                 "cp_program_id": {
                     "type": "string",
                     "description": "Unique identifier representing a specific CP Program raised by an Issuer. This CP Issue is allotted under this umbrella program"
-                },
-                "user_id": {
-                    "type": "string",
-                    "description": "User identifier"
                 },
                 "cp_trade_id": {
                     "type": "string",
@@ -574,6 +639,9 @@
                 "investor_settlement_details": {
                     "$ref": "#/definitions/SettlementDetails"
                 },
+                "ipa_settlement_details": {
+                    "$ref": "#/definitions/SettlementDetails"
+                },
                 "deal_confirmation_doc_id": {
                     "type": "string",
                     "description": "Unique identifier of the deal confirmation document signed by both the Issuer and the Investor"
@@ -610,7 +678,16 @@
                 },
                 "doc_type": {
                     "type": "string",
-                    "description": "Type of Document. Possible Values are ISIN_DOC, IPA_DOC, DEAL_CONFIRMATION_DOC, ALLOTMENT_LETTER, CORPORATE_ACTION_FORM"
+                    "description": "Type of Legal Documents exchanged and signed/countersigned by participants in the CPProgram",
+                    "enum": [
+                        "CREDIT_RATING_DOC",
+                        "BOARD_RESOLUTION_BORROWING_LIMIT_DOC",
+                        "DEPOSITORY_DOCS",
+                        "IPA_DOCS",
+                        "IPA_CERTIFICATE_DOC",
+                        "CORPORATE_ACTION_FORM",
+                        "DEAL_CONFIRMATION_DOC"
+                    ]
                 },
                 "doc_sub_type": {
                     "type": "string",
@@ -642,11 +719,23 @@
         "SettlementDetails": {
             "type": "object",
             "properties": {
+                "partyType": {
+                    "type": "string",
+                    "description": "partyType",
+                    "enum": [
+                        "ISSUER",
+                        "INVESTOR",
+                        "IPA"
+                    ]
+                },
                 "paymentAccountDetails": {
                     "$ref": "#/definitions/PaymentAccountDetails"
                 },
                 "depositoryAccountDetails": {
-                    "$ref": "#/definitions/DepositoryAccountDetails"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/DepositoryAccountDetails"
+                    }
                 }
             }
         },
@@ -685,6 +774,14 @@
                 "dp_name": {
                     "type": "string",
                     "description": "Name under which the DP Account is registered. For e.g. Barclays Securities India Pvt Ltd"
+                },
+                "dp_type": {
+                    "type": "string",
+                    "description": "Depository Account Type. For now only the IPA has two depository accounts one for Allotment and one for Redemption",
+                    "enum": [
+                        "ALLOTTMENT",
+                        "REDEMPTION"
+                    ]
                 },
                 "client_id": {
                     "type": "string",
